test to remove second scrollbar bug

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ body {
     text-decoration: none;
     font-family: "Kumbh Sans", sans-serif;
     overflow-x: hidden;
-    overscroll-behavior-x: none;
     scroll-behavior: smooth;
     transition: 1s;
     z-index: -1;
@@ -75,7 +74,6 @@ body {
     justify-content: space-between;
     position: static;
     background: var(--background);
-    overflow: hidden;
     padding: 25px;
     padding-top: 20px;
     margin-bottom: 0px;
@@ -133,7 +131,6 @@ body {
         border-color: var(--text);
         border: 1px;
         transition: 1s;
-        overflow: scroll;
     }
 
     .navlinks.responsive .icon {
@@ -289,7 +286,6 @@ body {
     grid-row-gap: 0px;
     text-align: center;
     width: fit-content;
-    overflow: hidden;
     transition: 0.3s;
     text-decoration: none;
     color: var(--text);
@@ -298,7 +294,6 @@ body {
 
 .spotlight img {
     grid-area: 1 / 1 / 2 / 2;
-    overflow: hidden;
 }
 
 .hoverspot {
@@ -411,7 +406,6 @@ body {
     flex-basis: content;
     z-index: 1;
     font-size: 7.5em;
-    overflow: hidden;
     grid-area: 1 / 1 / 2 / 2;
     font-weight: 700;
     color: #E6E6E6FF;
@@ -746,7 +740,6 @@ body {
     align-content: center;
     border-radius: 5px;
     font-size: 1em;
-
     color: var(--text);
 }
 
@@ -773,7 +766,6 @@ body {
     height: 100%;
     margin-bottom: 5vh;
     justify-self: center;
-    overflow: hidden;
     align-self: center;
     place-self: center;
     margin-left: 10%;
@@ -790,7 +782,7 @@ body {
     text-shadow: 0px 2.5px 10px  var(--background);
     margin-right: 5%;
     grid-area: 1 / 2 / 3 / 3;
-
+    font-size: 1.1em;
 }
 
 .headercenter {
@@ -1201,9 +1193,9 @@ body {
 }
 
 .bgsplash {
-    position: sticky;
+    position: relative;
     place-self: start;
-    top: 0px;
+    top: 300px;
     width: 100%;
     height: 100vh;
     margin-top: -50vh;
